# TestTask

./: catalysts.csv  created_molecules.csv  init.cypher  molecules.csv  reactions.csv  test-task.cabal
data/: accelerates.csv  catalysts.csv  created_molecules.csv  molecules.csv  reactions.csv
src/: Main.hs  Queries.hs  Types.hs
